testing/tests/ui/json-too-many-args.stderr
error: filter `json` expects at most one optional argument, got 2
 --> OneTwoThree.txt:1:3
       "1|json(2, 3) }}"
 --> tests/ui/json-too-many-args.rs:6:34
  |
6 | #[template(ext = "txt", source = "{{ 1|json(2, 3) }}")]
  |                                  ^^^^^^^^^^^^^^^^^^^^
